# ea-forum-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: server.py
src/clients/: algolia_client.py  graphql_client.py
src/config/: settings.py
src/models/: types.py
src/utils/: cache.py  retry.py
tests/: interactive_test.py  test_server.py
